--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -20,6 +20,7 @@
 
 /*modules*/
 @import "modules/_m-home";
+@import "modules/_m-home-grid";
 @import "modules/_m-realisations";
 @import "modules/_m-catalogue";
 @import "modules/_m-contact";
