--- a/sass/layout/_l-layout.scss
+++ b/sass/layout/_l-layout.scss
@@ -1,53 +1,38 @@
-.l-grid-container {
+
+/********************wrapper********************/
+.l-wrapper {
     display: grid;
     grid-template-columns: 0.5fr 3fr 0.5fr;
     grid-template-rows: 1fr repeat(3, 1fr);
     gap: 0px 0px;
     grid-template-areas:
     "l-wrapper l-wrapper l-wrapper"
-    "l-wrapper . l-wrapper"
+    "l-banner l-banner l-banner "
+    ". . . ."
     "l-footer l-footer l-footer";
-    
-    /********************wrapper********************/
 
-    .l-wrapper {
-        display: grid;
-        grid-template-columns: 0.5fr 3fr 0.5fr ;
-        grid-template-rows: repeat(3, 1fr);
-        gap: 1px 1px;
-        grid-template-areas:
-        "l-header l-header l-header"
-        "l-banner-img  l-banner-img  l-banner-img .";
-        grid-area: l-wrapper;
-    
-        grid-template-areas:
-        "l-banner l-banner l-banner ."
-        ". . . ."
-        "l-footer l-footer l-footer l-footer";
     /********************HEADER********************/
     .l-header {
         display: inline-grid;
-        
-        
         grid-template-columns: 1fr 1fr 5fr;
         grid-template-rows: 1fr;
-        gap: 1px 1px;
+        gap: 0px;
         grid-template-areas:
-            "l-menu l-menu l-menu";
-            grid-area: l-header;
+        "l-menu l-menu l-menu";
+        grid-area: l-header;
 
-            width: 100%;
-            height: 4rem;
-            background-color: map-get($colors,primary);
-            z-index: 999;
-            position: fixed;
+        width: 100%;
+        
+        background-color: map-get($colors,primary);
+        z-index: 999;
+        position: fixed;
+        
             
             @media screen and (min-width: map-get($break-point, md)) {
                 grid-template-areas:
-            "l-logo l-logo-lg l-menu ";
+                "l-logo l-logo-lg l-menu ";
                 background-color:transparent;
-                
-                
+                height: 4rem;
             }
             
             .l-logo__mobile{
@@ -96,6 +81,8 @@
                 z-index: 999;
                 display: none;
                 
+
+                
                 @include transition(.2s ease-in-out);
             
                 background: map-get($colors,primary);
@@ -109,9 +96,8 @@
                 @media screen and (min-width: map-get($break-point, md)) {
                     background: none;
                     width: auto;
-                    height: auto;
+                    height: 4rem;
                     display: grid;
-                    
                     
                     right: 0;
                     background: transparent;
@@ -327,9 +313,9 @@
         
             }
             
-}
-}
-    /********************FOOTER********************/
+    }
+}  
+/********************FOOTER********************/
     .l-footer{
         display: grid;
         grid-template-columns: 1fr 1fr 1fr ;
@@ -611,6 +597,6 @@
         }
     }
 
-}
+
 
 
