--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -1,11 +1,11 @@
 
-/* 
+/*
     Created on : 20-12-2019, 20:01:31
     Author     : Sylviana Vanmessen
 */
 
 /* Make css mobile first */
-@import "compass";
+/*@import "compass"; */
 
 /* Reset for better compatibility */
 
