--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -43,7 +43,7 @@ main{
 }
 
 h1{
-    margin: 2rem auto 3rem 2rem;
+    
     font-size: 24px;
     color: white;
     
@@ -57,7 +57,14 @@ h1{
 
 
 a {
-    
+    text-decoration: none;
+    font-size: 18px;
+    color: white;
+
+        &:hover{
+            color: map-get($colors , primaryGreen );
+        }
+
 }
 
 
