--- a/sass/layout/_l-layout.scss
+++ b/sass/layout/_l-layout.scss
@@ -2,12 +2,16 @@
 /********************wrapper********************/
 .l-wrapper {
     display: grid;
-    grid-template-columns: 0.5fr 3fr 0.5fr;
-    grid-template-rows: 1fr repeat(3, 1fr);
+    grid-template-columns:  1fr 1fr 1fr ;
+    grid-template-rows: auto;
     gap: 0px 0px;
     grid-template-areas:
-    "l-wrapper l-wrapper l-wrapper";
+    "l-header l-header l-header"
+    "l-banner-img l-banner-img ."
+    ". l-sections ."
+    "l-footer l-footer l-footer";
 
+}
     /********************HEADER********************/
     .l-header {
         display: inline-grid;
@@ -19,6 +23,7 @@
         grid-area: l-header;
 
         width: 100%;
+        
         background-color: map-get($colors,primary);
         z-index: 999;
         position: fixed;
@@ -34,13 +39,13 @@
             .l-logo__mobile{
                 display:grid;
                 width: 2.5rem;
-                margin:0.7rem 1rem 1rem 1rem ;
+                margin:0.7rem;
                 z-index: 1999;
                 position:fixed;
                 
                 @media screen and (min-width: map-get($break-point, md)) {
                     display: inline-block;
-                    margin: 1rem;
+                    margin: 0.5rem;
                     width: 2.5rem;
                     position: relative;
                     
@@ -50,19 +55,19 @@
             .l-logo__lg{
                 display:grid;
                 width: 11.5rem;
-                margin:0.7rem auto auto 4rem ;
+                margin:.7rem auto auto 4rem ;
                 z-index: 1999;
                 
                 
                 @media screen and (min-width: map-get($break-point, md)) {
                     display: grid;
-                    margin: 0.8rem auto auto 4rem;
+                    margin: 0.3rem auto auto 4rem;
                     width: 12.5rem;
                     position: relative;
                 
-                    
-                    
                 }
+
+                
             }
     
             .l-logo { 
@@ -76,6 +81,9 @@
                 grid-area: l-menu;
                 z-index: 999;
                 display: none;
+                
+                
+
                 
                 transition:.2s ease-in-out;
             
@@ -116,7 +124,7 @@
                     @media screen and (min-width: map-get($break-point, md)) {
                         z-index: 999;
                         width: auto;
-            
+                        height: 4rem;
                         text-align: right;
                         position: inherit;
                         margin: auto 0 auto -4rem;
@@ -308,289 +316,119 @@
             
     }
 
-    /********************section banner********************/
+    /********************BANNER********************/
     .l-banner{
-        display: grid;
-        grid-template-columns: 1fr;
+        display:grid;
+        grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 1fr;
-        margin-left: 0;
+        width: 100%;
+        gap: 0px;
+        grid-template-areas:
+        "l-banner-img  l-banner-img ."
+        ". . l-img ";
         grid-area: l-banner;
-
-                .l-banner-img {
-                    display: grid;
-
-                    .l-img { grid-area: l-img; }
+        display: grid;
+                grid-column-start:1 ;
+                grid-column-end:2;
+    
+            .l-banner-img{
                 
-                    .l-detail { grid-area: l-detail; }
-                    
-                    .l-btn { grid-area: l-btn; }
-                    
-                    .l-logo\/det { grid-area: l-logo\/det; }
-                }
-
-                .header__mobile{
-                    margin-top: 3rem;
-                    z-index: 0;
-                    height: auto;
-
-                    @media screen and (min-width: map-get($break-point, md)) {
-                        display:none;
-                    }
-                }
-                .point__banner{
-                    display: none;
-
-            @media screen and (min-width: map-get($break-point, md)) {
-                display:block;
-                position: absolute;
-                width: 20%;
-                margin: -15rem auto auto 14rem;
-            }
-
-            @media screen and (min-width: map-get($break-point, lg)) {
-                width: 15%;
-                margin: -15rem auto auto 14rem;
             }
     }
-    }     
-
-    /********************FOOTER********************/
-        .l-footer{
-            display: grid;
-            grid-template-columns: 1fr  ;
-            grid-template-rows:  1fr;
-            gap: 0px ;
-            grid-template-areas:
-            "l-footer l-footer l-footer "
-            "l-left l-middle l-right";
-            grid-area: l-footer;
 
 
-            background: map-get($colors ,primary );
-            width: 100%;
-            margin-left: auto;
-            margin-right: auto;
-            padding-left: 2rem;
-            margin-top: 8rem;
+
+
+/********************FOOTER********************/
+footer{
+    .l-footer{
+        background: map-get($colors ,primary );
+        width: 100%;
+        height: auto;
+    
+        display: flex;
+        flex-direction: column;
+
+        @media screen and (min-width: map-get($break-point, lg)) {
+            flex-direction: row;
+            justify-content: space-around;
             
-            .bordure {
-                border-bottom:1px solid white;
-                margin-top: 7rem;
-                z-index: 999;
-                width: 80%;
-                margin-left: auto;
-                margin-right: auto;
-                padding-top: 2rem;
-                display: none;
+        }
 
-                @media screen and (min-width: map-get($break-point, md)) {
-                    margin-top: 3rem;
-                    padding-top: 1rem;
-                    display: block;
-                    width: 95%;
-                    margin-left: 0rem;
-                }
-                @media screen and (min-width: map-get($break-point, lg)) {
-                    display: block;
-                }
-                }
-            
             .icon{
                 width: 1rem;
                 margin-right: 1rem;
             }
 
-            .copyright{
-                display: flex;
-                justify-content: center;
-                padding-top: 3rem;
-                margin-bottom: 0.5rem;
-                margin-left: -1rem;
-                width: 100%;
-
-                @media screen and (min-width: map-get($break-point, lg)) {
-                    
-                }
-
-                a{
-                    text-decoration: none;
-                padding: 1rem 1.5rem;
-                text-align: center;
-                color: map-get($colors,main);
-                font-size: 16px;
-                width: 100%;
-
-                    &:hover{
-                        color: map-get($colors , primaryGreen );
-                    }
-                }
-
-                @media screen and (min-width: map-get($break-point, md)) {
-                    font-size: 16px;
-                    padding-top: 2rem;
-                    width: 100%;
-                    text-align: center;
-                    margin-top: 0rem;
-                }
-                @media screen and (min-width: map-get($break-point, lg)) {
-                    font-size: 18px;
-                    padding-top: 3rem;
-                    padding-bottom: 0.5rem;
-                    width: auto;
-                    text-align: center;
-                    margin-top: 2rem;
-                    margin-left: 25rem;
-                    display: inline-block;
-                    
-                }
-            }
+            
             .logo-footer{
-                width: 15rem;
+                width: 13.5rem;
                 padding-top: -2rem;
-                @media screen and (min-width: map-get($break-point, md)) {
-                    width: 11rem;
+                padding-bottom: 2rem;
+
+                @media screen and (min-width: map-get($break-point, lg)) {
+                    
                     
                 }
-                @media screen and (min-width: map-get($break-point, lg)) {
-                    padding-top: 1.5rem;
-                }
             }
-
-
-            .icon--heart{
-                width: 1rem;
-            }
-
+            
             .section__footer--left{
-                margin-left: 1rem;
-                
-
+                justify-content: space-between;
+                margin-left: 2rem;
                 h1{
-                    margin: 2rem auto 0rem -1rem;
-                    font-size: 24px;
-                    
+                    padding-top: 2rem;
                 }
                 
-                @media screen and (min-width: map-get($break-point, md)) {
-                    
-                    margin-top: -7rem;
-                    font-size: 20px;
-                    h1{
-                        padding-top: 2rem;
-                        margin-left: -1rem;
-                    }
-                }
                 @media screen and (min-width: map-get($break-point, lg)) {
-                    h1{
-                        padding-bottom: 2rem;
-                        margin-left:4rem;
-                    }
-                
-                }
-                
-
-                a{
-                    color: map-get($colors ,main );
-                    margin-top: -1rem;
-                    text-decoration-line: none;
-                    margin-left: -1rem;
+                    max-width: 20%;
                     font-size: 18px;
                     
-                    
-                    @media screen and (min-width: map-get($break-point, md)) {
-                        font-size: 18px;
-                        margin-left: -1rem;
-                    }
-                    @media screen and (min-width: map-get($break-point, lg)) {
-                    
-                    margin-left: 4rem;
-                    font-size:20px;
-                    
-                    }
-                    
-                    &:hover{
-                        color: map-get($colors , primaryGreen );
-                    }
-                
                 }
+
+                
+                
             }
 
             .section__footer--middle{
-                margin-left: -2rem;
-                
-                @media screen and (min-width: map-get($break-point, md)) {
-                    margin-left: -2rem;
-                    margin-top: 0rem;
-                    font-size: 18px;
+                justify-content: space-between;
+                margin-left: 2rem;
 
+                h1{
+                    margin-bottom: 1rem;
                 }
+
                 @media screen and (min-width: map-get($break-point, lg)) {
-                
-                    width: auto;
-                    text-align: center;
-                    display: flex;
-                    margin:0;
-                    h1{
-                        margin: -17rem auto 0rem auto;
-                        font-size: 24px;
-                        
-                    }
+                    max-width: 40%;
+                    margin-top: 2rem;
                 }
 
-                ul{
-                    margin-top: 0.5rem;
-                    @media screen and (min-width: map-get($break-point, lg)) {
-                        margin: -11rem auto auto -44rem;
-                        text-align: left;
-                    }
-                }
+                
                 li{
                     color: map-get($colors ,main );
                     text-decoration: none;
                     text-decoration-line: none;
-                    margin-left: 2rem;
-                    font-size: 16px;
-                    height: 3rem;
-                    width: auto;
-                    margin-right: 1rem;
                     
-                    @media screen and (min-width: map-get($break-point, md)) {
-                        font-size: 16px;
-                        margin-left: 3rem;
-                        line-height: 2rem;
-                        
-                        width: auto;
-                    }
-                    @media screen and (min-width: map-get($break-point, lg)) {
-                        color: map-get($colors ,main );
-                        text-decoration: none;
-                        text-decoration-line: none;
-                        margin-left: 4rem;
-                        font-size: 18px;
-                        height: 3rem;
-                        width: auto;
-                        
-                    }
+                    font-size: 18px;
+                    line-height: 3rem;
+                    
+                }
+                .spacing{
+                    margin-left: 2rem;
+                    margin-top: -1rem;
                 }
             }
 
             .section__footer--right{
-                margin-left: -2rem;
-                
-
-                @media screen and (min-width: map-get($break-point, md)) {
-                    h1{
-                        margin-left: 3rem;
-                        margin-bottom: 2.5rem;
-                    
-                    }
-                    margin-left: -3rem;
-                    margin-top: -1rem;
+                justify-content: space-between;
+                margin-left: 2rem;
+            
+                h1{
+                    margin-bottom: 2rem;
+                    margin-top: 2rem;
                 }
+                
                 @media screen and (min-width: map-get($break-point, lg)) {
-                    margin: -29rem auto auto 56rem;
-                    width: auto;
-                    
+                    max-width: 40%;
                 }
                 
                 
@@ -598,42 +436,70 @@
                     color: map-get($colors ,main );
                     text-decoration: none;
                     text-decoration-line: none;
-                    margin-left: 2rem;
                     font-size: 18px;
-                    height: 2rem;
-                    width: auto;
+                    height: 3rem;
 
-                    @media screen and (min-width: map-get($break-point, md)) {
-                        font-size: 18px;
-                        color: map-get($colors ,main );
-                        text-decoration: none;
-                        text-decoration-line: none;
-                        margin-left: 4rem;
-                        font-size: 16px;
-                        height: 2.5rem;
-                        width: auto;
-                    
-                    
-                    }
-                    @media screen and (min-width: map-get($break-point, lg)) {
-                        margin-left: 3rem;
-                        font-size: 20px;
-                        height: 2.5rem;
-                        width: auto;
-                        padding-top: 1rem;
-                        
-                    }
-                    
+                }    
+                
+                .btn--footer{
+                    float: left;
+                    margin: 2rem auto auto auto;
                     
                 }
+
             }
-            .btn--footer{
-                float: left;
-                margin: 6rem auto 3rem 59rem;
-                
+            
+            
+        
+        }
+    
+
+
+    }
+
+.copyright{
+    display: flex;
+    text-align: center;
+    padding-top: 3rem;
+    margin-bottom: 0.5rem;
+    margin-left: -1rem;
+    width: auto;
+    background-color:map-get($colors , primary ); 
+
+    a{
+    text-decoration: none;
+    padding: 1rem 1.5rem;
+    text-align: center;
+    color: map-get($colors,main);
+    font-size: 16px;
+    width: 100%;
+
+        &:hover{
+            color: map-get($colors , primaryGreen );
+        }
+    }
+
+    @media screen and (min-width: map-get($break-point, lg)) {
+        font-size: 18px;
+        padding-top: 3rem;
+        padding-bottom: 0.5rem;
+        width: auto;
+        text-align: center;
+        display: block;
+        
+    }
+    .icon--heart{
+        width: 1rem;
+        text-decoration: none;
+        
+        text-align: center;
+        color: map-get($colors,main);
+        font-size: 16px;
+        width: 0.8rem;
+        
+            &:hover{
+                color: map-get($colors , primaryGreen );
             }
     }
 
 }
-
-
