--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,111 +1,96 @@
-
 /* mobile first css */
 
-*, *:before, *:after {
-    @include box-sizing(border-box);
+*,
+*:before,
+*:after {
+  @include box-sizing(border-box);
 }
 
-
 @font-face {
-    font-family: 'primary-font';
-    src:local('.\font\Segoe UI.ttf') format('ttf'),
-        local('.\font\Segoe UI.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'primary-font';
+  src: local('.\font\Segoe UI.ttf') format('ttf'),
+    local('.\font\Segoe UI.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
 }
 @font-face {
-    font-family: 'secondary-font';
-    src:local('.\font\Quicksand_Light.otf') format('otf'),
-        local('.\font\Quicksand_Light.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'secondary-font';
+  src: local('.\font\Quicksand_Light.otf') format('otf'),
+    local('.\font\Quicksand_Light.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
 }
 
 html {
-    font-size: 100%;
-    
+  font-size: 100%;
 }
-
 
 body {
-    background-color: white;
-    margin: 0rem;
-    padding: 0rem;
-    width: auto; 
-    font-size: 20px;
-    font-family: map-get($fonts, primary-font );
+  background-color: white;
+  margin: 0rem;
+  padding: 0rem;
+  width: auto;
+  font-size: 20px;
+  font-family: map-get($fonts, primary-font);
 }
 
-main{
-    margin: 0rem;
-    padding: 0rem;
+main {
+  margin: 0rem;
+  padding: 0rem;
 }
 
-h1{
-    margin: 2rem auto 3rem 2rem;
-    font-size: 24px;
-    color: white;
-    
-    @media screen and (min-width: map-get($break-point, md)) {
+h1 {
+  margin: 2rem auto 3rem 2rem;
+  font-size: 24px;
+  color: white;
 
-    }
-    @media screen and (min-width: map-get($break-point, lg)) {
-        
-    }
+  @media screen and (min-width: map-get($break-point, md)) {
+  }
+  @media screen and (min-width: map-get($break-point, lg)) {
+  }
 }
-
 
 a {
-    
 }
-
 
 img {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
 }
 
-p{
-    font-size:  20px;
-    
+p {
+  font-size: 20px;
 }
-
 
 .btn {
-    background-color: #4eb748;
-    border-bottom-right-radius: 15px;
-    border: none;
-    color: white;
-    padding: 0.7rem 1rem;
-    margin: 2rem auto;
-    text-align: left;
-    text-decoration: none;
-    display: block;
-    font-size: 20px;
-    cursor: pointer;
-    max-width: 20rem;
-    font-weight: bold;
-    justify-content: center;
+  background-color: #4eb748;
+  border-bottom-right-radius: 15px;
+  border: none;
+  color: white;
+  padding: 0.7rem 1rem;
+  margin: 2rem auto;
+  text-align: left;
+  text-decoration: none;
+  display: block;
+  font-size: 20px;
+  cursor: pointer;
+  max-width: 20rem;
+  font-weight: bold;
+  justify-content: center;
+  display: flex;
+
+  &:hover {
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.24);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.24);
+    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.24);
+    color: map-get($colors, primary);
+  }
+
+  .post {
     display: flex;
-    
-    
-
-        &:hover{
-            -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.24);
-            -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.24);
-            box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.24);
-            color:map-get($colors , primary);  ;
-        }
-
-    .post{
-        display: flex;
-        justify-content: space-between;
-        width: 13%;
-        height: 4%;
-        margin:0.2rem 1rem auto 1rem;
-
-        
-    }
-
-
-    }
+    justify-content: space-between;
+    width: 13%;
+    height: 4%;
+    margin: 0.2rem 1rem auto 1rem;
+  }
+}
